kubernetes/kube-dashboard/traefikroutes.yaml
# Redirect to https
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kube-dashboard-redirect-https
  namespace: kube-dashboard
  labels:
    app: kube-dashboard
    app.kubernetes.io/name: kube-dashboard
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-dashboard-tls
  namespace: kube-dashboard
  labels:
    app: kube-dashboard
    app.kubernetes.io/name: kube-dashboard-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.k8s.home.kijowski.io`)
      kind: Rule
      services:
        - name: kube-dashboard-kubernetes-dashboard-web
          namespace: kube-dashboard
          port: web
          scheme: http

    - match: Host(`dashboard.k8s.home.kijowski.io`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: kube-dashboard-kubernetes-dashboard-api
          namespace: kube-dashboard
          port: api
          scheme: http

  tls:
    certResolver: aws-dns

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-dashboard
  namespace: kube-dashboard
  labels:
    app: kube-dashboard
    app.kubernetes.io/name: kube-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dashboard.k8s.home.kijowski.io`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: kube-dashboard-redirect-https
